# holochain-nixpkgs

./: .gitattributes  .gitignore  Cargo.toml  README.md  ci.nix  default.nix  flake.nix  holochain_version.nix  shell.nix
.github/workflows/: autorebase.yml  build.yml  update-dispatch.yml  update.yml
ci/: eval-github-action-status.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/crates-index-helper/: Cargo.toml
crates/crates-index-helper/src/: lib.rs
crates/holochain-nixpkgs-util/: Cargo.toml
crates/holochain-nixpkgs-util/src/: lib.rs  main.rs
crates/update-holochain-versions/: Cargo.toml
crates/update-holochain-versions/src/: lib.rs  main.rs  nvfetcher.rs
crates/update-holochain-versions/test/fixtures/nvfetcher_0/: nvfetcher.toml  sources.nix
crates/update-holochain-versions/test/fixtures/nvfetcher_0/_sources/: generated.nix
nix/: default_old.nix  sources.json
nix/crate2nix/: Cargo.nix
nix/modules/: NIX_PATH.nix  all.nix  checks.nix  holochainPackages.nix  nixpkgsVersion.nix  update.nix
nix/nvfetcher/: nvfetcher.toml  sources.nix
nix/nvfetcher/_sources/: .shake.database  generated.json  generated.nix
overlays/: default.nix  rust-overlay.nix  rust.nix
pkgs/holochain/: default.nix
scripts/: nix_path.sh
