[package]
name = "crates-index-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates-index = { version = "2.1.0", features = [ "git" ] }
once_cell = "1.18.0"
log = "0.4.17"
semver = "1.0.14"
anyhow = "1.0.66"
itertools = "0.10.5"
