[package]
name = "holochain-nixpkgs-util"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = { version = "0.8" }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
clap = { version = "3.1", features = ["derive"] }
git2 = "0.14"
anyhow = "1.0"
gitoxide-core = { version = "0.12", features = ["async-client"] }
# git-protocol = { version = "*", features = ["async-client"] }
git-transport = { version = "0.13.1", features = ["async-client"] }
prodash = "16.1.3"
regex = "1.5"
toml_edit = "0.6"
indoc = "1.0"
linked_hash_set = "0.1"
