[package]
name = "holochain-nixpkgs-util"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
update-holochain-versions = { path = "../update-holochain-versions" }
crates-index-helper = { path = "../crates-index-helper" }

serde = { version = "1.0", features = ["derive"]}
serde_yaml = { version = "0.8" }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"
prodash = "16.1.3"
regex = "1.5"
toml_edit = { version = "0.14.2", features = ["serde", "easy"] }
indoc = "1.0"
linked_hash_set = "0.1"
linked-hash-map = "0.5"
itertools = "0.10.3"
semver = "1.0"
