[package]
name = "update-holochain-versions"
version = "0.0.1-dev.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.9"
structopt = "0.3"
anyhow = "1.0"
tempfile = "3.2"
handlebars = "4.1"
maplit = "1.0"
serde = { version = "1.0", features =["derive"] }
serde_json = "1.0"
json5 = "0.4"
regex = "1.5"
once_cell = "1.8"
cargo-lock = "7.0"
toml_edit = "0.6"
# toml_edit = { git = "https://github.com/steveeJ-forks/toml_edit", branch = "pr/dotted-bare-table-keys" }
url = "2.2"
semver = "1.0"
